# Student-and-T

./: .env  .env.template  .gitignore  README.md  docker-compose.yml  id_rsa  package-lock.json
.github/workflows/: ci.yaml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 33d7e12293d2_init.py  4ebdd17ca530_init.py  b6ba0d651a0d_tg_username.py
backend/app/: create_admin.py  main.py
backend/app/api/: deps.py
backend/app/api/endpoints/: admin.py  auth.py  bookings.py  events.py  hub_admin.py  hubs.py  mentors.py
backend/app/core/: config.py  constants.py  security.py
backend/app/crud/: crud_booking.py  crud_event.py  crud_hub.py  crud_hub_admin.py  crud_hub_stats.py  crud_mentor.py  crud_user.py
backend/app/db/: models.py  session.py
backend/app/schemas/: booking.py  event.py  hub.py  hub_admin.py  mentor.py  stats.py  user.py
backend/app/services/: bot.py  rag.py
backend/app/utils/: email_sender.py  file_validator.py
backend/tests/: test_hub_admin.py  test_mentor_flow.py
deploy/backend/: deployment.yaml  secret.yaml  service.yaml
deploy/frontend/: deployment.yaml  ingress.yaml  service.yaml
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  App.tsx  fonts.css  index.css
frontend/src/api/: auth.js  bookings.js  client.js  events.js  hubs.js  mentors.js
frontend/src/contexts/: AuthContext.jsx
frontend/src/hooks/: useAuth.js
frontend/src/pages/: HomePage.jsx  NotFoundPage.jsx
(+16 files in other folders)
