[project]
name = "student-and-t"
version = "0.1.0"
description = "Student and T - Hub interaction platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic-settings>=2.2.1",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "aiogram>=3.6.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.1",
    "requests>=2.33.1",
    "python-magic>=0.4.27",
    "filetype>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
